# fileshare

./: .gitignore  Justfile  LICENSE  Pipfile  README.md  filestore.py  main.py  pyproject.toml
fileshare/: filestore.py  main.py
